made about us page

--- a/mongoApp/views/app.ejs
+++ b/mongoApp/views/app.ejs
@@ -8,7 +8,7 @@
             style="width: 400px; height: 400px; background-color: rgba(0,0,255,0.1);"
             class="d-block rounded mx-auto mt-0"
             id="imgData" 
-            src= "../public/images/wan.jpg" 
+            src= "../public/images/ang.jpg" 
             alt="First slide">
         </div>
     </div>
